--- a/Alexander/index.html
+++ b/Alexander/index.html
@@ -3,51 +3,26 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 <title>The Lost Castle</title>
+    <style>
+        #container {
+            background: #000;
+            width: 400px;
+            height: 300px;
+        }
+    </style>
 
-
-<script id="vertex-shader" type="x-shader/x-vertex">
-attribute vec4 vPosition;
-attribute vec3 vColor;
-
-uniform mat4 viewMatrix;
-uniform mat4 projMatrix;
-
-uniform mat4 transMatrix;
-uniform mat4 rotMatrix;
-uniform mat4 scaleMatrix;
-
-varying vec4 color;
-
-void
-main(){
-    gl_Position =  projMatrix * viewMatrix * transMatrix * rotMatrix * scaleMatrix * vPosition;
-    color = vec4(vColor, 1.0);
-}
-</script>
-
-<script id="fragment-shader" type="x-shader/x-fragment">
-precision mediump float;
-
-varying vec4 color;
-
-void
-main(){
-    gl_FragColor = color;
-}
-</script>
-
+<script type="text/javascript" src="../Common/Three.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type="text/javascript" src="castle.js"></script>
 <script type="text/javascript" src="objects.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-<div align="center">
-<canvas id="gl-canvas" width="1024" height="1024" >
-Oops ... your browser doesn't support the HTML5 canvas element
-</canvas>
+<div align="center" id="container">
+
 </div>
 </body>
 </html>
