Plane and textures were added.

--- a/Alexander/index.html
+++ b/Alexander/index.html
@@ -6,12 +6,12 @@
     <style>
         #container {
             background: #000;
-            width: 400px;
-            height: 300px;
+            width: 1024px;
+            height: 768px;
         }
     </style>
 
-<script type="text/javascript" src="../Common/Three.js"></script>
+<script type="text/javascript" src="../Common/three.js"></script>
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
