Top of the Flying robot was added.

--- a/Alexander/index.html
+++ b/Alexander/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-<title>The Lost Castle</title>
+<title>Ritual Dance</title>
     <style>
         #container {
             background: #000;
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
-<script type="text/javascript" src="castle.js"></script>
+<script type="text/javascript" src="rdance.js"></script>
 <script type="text/javascript" src="objects.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 </head>
