--- a/Alexander/index.html
+++ b/Alexander/index.html
@@ -13,12 +13,12 @@
 
 <script type="text/javascript" src="../Common/three.js"></script>
 <script type="text/javascript" src="rdance.js"></script>
-<script type="text/javascript" src="objects.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 </head>
 
 <body>
 Move using arrow keys and press 'L' to turn on/off the light.
+Hold mouse down and move the camera.
 <div align="center" id="container">
 
 </div>
